--- a/index.html
+++ b/index.html
@@ -5,15 +5,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="style.css">
-    <title>My Project</title>
+    <title>Movie App</title>
 </head>
 
 <body>
-    <h1>My project</h1>
+    <header>
+        <form action="" id="form">
+            <input type="text" id="search" class="search" placeholder="Search">
+        </form>
+    </header>
+    <main id="main">
+        <div class="movie">
+            <img class="movie__image"
+                src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQi0jEyMDd9&auto=format&fit=crop&w=1154&q=80"
+                alt="cinema">
+            <div class="movie__info">
+                <h3>Movie Title</h3>
+                <span class="movie__value movie__value--green">9.8</span>
+            </div>
+
+            <div class="movie__overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit amet laborum, fugiat aliquam
+                eaque? Quam aperiam qui magni fugiat.
+            </div>
+        </div>
+
+        <div class="movie">
+            <img class="movie__image"
+                src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQi0jEyMDd9&auto=format&fit=crop&w=1154&q=80"
+                alt="cinema">
+            <div class="movie__info">
+                <h3>Movie Title</h3>
+                <span class="movie__value movie__value--green">9.8</span>
+            </div>
+
+            <div class="movie__overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit amet laborum, fugiat aliquam
+                eaque? Quam aperiam qui magni fugiat.
+            </div>
+        </div>
+
+        <div class="movie">
+            <img class="movie__image"
+                src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQi0jEyMDd9&auto=format&fit=crop&w=1154&q=80"
+                alt="cinema">
+            <div class="movie__info">
+                <h3>Movie Title</h3>
+                <span class="movie__value movie__value--green">9.8</span>
+            </div>
+
+            <div class="movie__overview">
+                <h3>Overview</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit amet laborum, fugiat aliquam
+                eaque? Quam aperiam qui magni fugiat.
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
