--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
         </div>
     </main>
+    <script src="secrets.js"></script>
     <script src="script.js"></script>
 </body>
 
